# docq

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE.AGPL3  README.md  mkdocs.yaml  pyproject.toml  trigger-release.sh
.github/: CODEOWNERS  release.yml
.github/workflows/: build.yml  codeql.yml  docsite.yml  publish-container.yml  publish.yml.unused  release.yml
deploy/aws/cdk-app/: .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
docs/: acknowledgement.md  index.md  mkdocs.yaml
docs/developer-guide/: contributing.md  extensions.md  file-storage-services.md  getting-started.md  web-api.md
docs/docs/: index.md
docs/overview/: deployment-scenarios.md  design-principles.md  introduction.md  key-features.md
docs/stylesheets/: extra.css
docs/user-guide/: agents-actions.md  config-spaces.md  configuration.md  data-sources.md  deploy-to-aws.md  deploy-to-azure.md  deploy-to-gcp.md  deploy-to-streamlit.md  faq.md  file-storage-services.md  getting-started.md  llm-config.md
infra/: README.md
infra/app/azure/arm/: destroy.sh
infra/azure/arm/: appservice.json  appservice.parameters.json  containerinstances.json  deploy.sh  destroy.sh
infra/inference/azure/arm/: deploy.sh  destroy.sh  model-version.json  online-endpoint-deployment.json  online-endpoint.json  test-endpoint.sh
infra/inference/azure/cli/: deploy.sh  destroy.sh  online-deployment-llama2-7b-chat-v8.yaml  update.sh
misc/: docker.env.template  docq-extensions.json.template  pytest-integration.ini.template  pytest.env.template  secrets.toml.template
scripts/: gen_pages.py
source/docq/: __init__.py  ask.py  config.py  constants.py  db_migrations.py  domain.py  embed_config.py  extensions.py  llm_personas.py  manage.py  manage_assistants.py  manage_credetials.py  manage_documents.py  manage_engagements.py  manage_groups.py  manage_indices.py  manage_organisations.py  manage_orgs.py  manage_personas.py  manage_settings.py  manage_sharing.py  manage_space_groups.py  manage_spaces.py  manage_user_groups.py  manage_users.py  run_queries.py  setup.py  tmp.py
source/docq/access_control/: main.py
source/docq/agents/: assistant_agent.py  conversable_agent.py  datamodels.py  main.py  semantic_kernel_utils.py  skills.py  skills_utils.py  user_proxy_agent.py  utils.py
source/docq/data_source/: aws_s3.py  azure_blob.py  azure_blob_storage.py  googledrive.py  knowledge_base_scraper.py  list.py  main.py  manual_upload.py  onedrive.py  web_scraper.py
source/docq/data_source/support/: az_reader.py  data_source_handler.py  s3_reader.py  utils.py  web_extracting.py
source/docq/integrations/: __init__.py  manage_slack.py  models.py  slack.py  slack_application.py  slack_oauth_flow.py
source/docq/model_selection/: main.py
source/docq/services/: __init__.py  credential_utils.py  email-template.html  google_drive.py  ms_onedrive.py  smtp_service.py
source/docq/support/: ansi_colours.py  auth_utils.py  llamaindex_otel_callbackhandler.py  llm.py  metadata_extractors.py  node_parsers.py  pydantic.py  rag_pipeline.py  source_formatter.py  store.py  utils.py
source/web/: __init__.py  constants.py  layout.py  utils.py
storage/: default__vector_store.json  docstore.json  index_store.json
tests/: utilities.py
tests/docq/: domain_test.py  manage_documents_test.py  manage_spaces_test.py
tests/docq/data_source/: azure_blob_test.py  document_list_item_test.py  manual_upload_test.py  web_scraper_readthedocs_test.py
tests/docq/support/: auth_utils_test.py  llm_test.py  source_formatter_test.py  store_test.py
tests/integration/: __init__.py  backend_integration_test.py  embedding_integration_test.py  run_ask_integration_test.py
tests/integration/fixtures/: test_user.json
tests/scenarios/: conftest.py
tests/unit/docq/: domain_test.py  manage_documents_test.py  manage_organisations_test.py  manage_spaces_test.py  manage_users_test.py
web/: admin.py  admin_docs.py  admin_engagements.py  admin_groups.py  admin_logs.py  admin_orgs.py  admin_overview.py  admin_settings.py  admin_space_groups.py  admin_spaces.py  admin_user_groups.py  admin_users.py  authorize_gdrive.py  dev.py  embed.py  general.py  index.py  integrations.py  personal.py  personal_ask.py  personal_chat.py  personal_docs.py  shared.py  shared_ask.py  shared_spaces.py  signup.py  tools.py  verify.py
web/admin/: admin_integrations.py  admin_logs.py  admin_orgs.py  admin_section.py  admin_settings.py  admin_space_groups.py  admin_spaces.py  admin_user_groups.py  admin_users.py  index.py
web/api/: README.md  auth_handler.py  base.py  base_handlers.py  chat_completion_handler.py  chat_history_handler.py  chat_thread_handler.py  file_upload_handler.py  files_handler.py  handlers.py  hello_handler.py  history_handler.py  index_handler.py  models.py  rag_completion_handler.py  space_handler.py  spaces_files_handler.py  spaces_handler.py  templates.py  thread_handler.py  threads_handler.py  token_handler.py  top-questions_handler.py  top_questions_handler.py  utils.py
web/api/integration/: utils.py
web/api/utils/: auth_utils.py  constants.py  docq_utils.py  pydantic_utils.py
web/ml_eng_tools/: assistants.py  rag.py  visualise_agent_messages.py  visualise_index.py
web/page_handlers/: embed.py  home.py  personal_chat.py  shared_ask.py
web/page_handlers/admin/: admin_assistants.py  admin_integrations.py  admin_orgs.py  admin_settings.py  admin_user_groups.py  admin_users.py  index.py
web/page_handlers/ml_eng_tools/: assistants.py  rag.py  visualise_index.py  visualise_vector_store_index.py
web/personal/: index.py
web/shared/: index.py
web/slack/: app_home.py  chat_handler.py  index_handler.py  slack_application.py
web/st_components/: static_utils.py
web/st_components/page_header/: __init__.py
web/st_components/sidebar_header/: __init__.py
web/utils/: constants.py  error_ui.py  formatters.py  handlers.py  layout.py  layout_assistants.py  observability.py  sessions.py  streamlit_application.py  streamlit_page_extension.py  validation_ui.py
(+53 files in other folders)
